test/compile-error/3/Solution.java
// Class can't be found
public class NotTheRightClassName {

  public int main(int a, int b) {
    return a + b;
  }

}
